TM-10999 Fix Add boundary check so that users can not move modal dialogs out of view port

--- a/web-app/tds/web-app/css/elements/general/dialog.sass
+++ b/web-app/tds/web-app/css/elements/general/dialog.sass
@@ -1,5 +1,8 @@
 div.modal-dialog
   padding: 0px
+  margin: unset !important
+  display: none
+  visibility: visible
   &.modal-xlg
     width: 1065px
   &.modal-xxl
